--- a/assets/app/gallery/videos/video-display/video-display.component.css
+++ b/assets/app/gallery/videos/video-display/video-display.component.css
@@ -41,34 +41,54 @@
 
 }
 .list{
+    /*display:block;*/
+    overflow: auto;
+    white-space: nowrap;
     background-color: grey;/*#B3DBC0;*/
-    width: 20%;
-    height:350px;
-    overflow: scroll;
+    width: 100%;
+    height:75px;
+
 		border-radius:3px;
 		margin-top: 5px;
+    margin-bottom:5px;
+    padding:0;
+}
+.list img{
+  display: inline-block;
+  width:60px;
+  margin: 0;
+  height:75px;
 }
 .item{
-   width:70%;
-   height:320px;
+
+   width:100%;
+   height:400px;
 
 }
 .display-image{
   position: relative;
 	 width:100%;
    height: 90%;
-   padding: 0 5px;
+   padding: 0;
    margin: 0 auto;
 }
-.display-image img{
+video{
   /*position: relative;*/
   /*position: absolute;*/
-   max-width:100%;
-   max-height: 100%;
-   margin: auto;
+   width:auto ;
+   max-width: 100% !important;
+   height:400px;
+   margin: 0 auto ;
    display:block;
 
+
 }
+/*video {
+   display:block;
+    width: 60%;
+    height: auto;
+    margin:10px auto;
+}*/
 .control{
   position: relative;
   height: 10%;
@@ -77,16 +97,6 @@
 
 	color:#FE0000;
 }
-/*.backControl{
-  position: absolute;
-  top:-180px;
-  left:-10px;
-}
-.nextControl{
-  position:absolute;
-  top:-180px;
-  right:-17px;
-}*/
 
 a:hover{
    color:hotpink;
@@ -138,53 +148,52 @@ a:active{
 .control img {
   /*position: relative;
  /* margin: 5px 10px 0 0;*/
-  width:21px;
-  height:21px;
+  width:28px;
+  height:28px;
 }
-video {
-   display:block;
-    width: 60%;
-    height: auto;
-    margin:10px auto;
-}
+
 @media (min-width: 576px) {
+  .list{
+      /*display:block;*/
+      background-color: grey;/*#B3DBC0;*/
+      width: 20%;
+      height:400px;
+      overflow: scroll;
+  		border-radius:3px;
+  		margin-top: 5px;
+      padding: 1% 2%;
+  }
   .list img{
     display:block;
-    width:90%;
+    width:82px;
+    height:100px;
     margin: 0 auto;
+
   }
   .control{
    width:90%;
 
   }
   .control img {
-    /*position: relative;
-   /* margin: 5px 10px 0 0;*/
-    width:24px;
-    height:24px;
+    width:32px;
+    height:32px;
   }
   .backP, .nextP, .commentP{
      position: relative;
      margin-right: 10px;
 
   }
-  .back {
-  	/*padding:10px 20px 10px 30px;*/
-  }
-  .like {
-    /*padding:10px 20px 10px 40px;*/
-  }
-  .next {
-    /*padding:10px 30px 10px 20px;*/
+  .display-image .source{
+      bottom:4.5%;
   }
 }
  /*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) {
-  .list img{
+  /*.list img{
     display:block;
     width:85%;
     margin: 0 auto;
-  }
+  }*/
   .control{
      width:90%;
    }
@@ -207,11 +216,11 @@ video {
       height:520px;
       overflow: scroll;
   }
-  .list img{
+  /*.list img{
     display:block;
     width:60%;
     margin: 0 auto;
-  }
+  }*/
   .item{
 
      height:520px;
@@ -244,11 +253,11 @@ video {
      height:500px;
 
   }
-  .list img{
+  /*.list img{
     display:block;
     width:50%;
     margin: 0 auto;
-  }
+  }*/
   .control{
      /*width:75%;*/
 
@@ -259,7 +268,7 @@ video {
     /* margin: 5px 10px 0 0;*/
      width:32px;
      height:32px;
-     text-decoration:
+
 
    }
 
