--- a/assets/app/header/header.component.html
+++ b/assets/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="row" (window:scroll)="myScrollHandler($event)">
+<div class="row" (window:scroll)="myScrollHandler()">
    <div class="col-md-4 ">
       <h4><img src="/assets/images/fi-logo64.png" class="img-fluid"/><span>Finest</span> Intention</h4>
    </div>
