--- a/assets/app/gallery/videos/video-display/video-display.component.html
+++ b/assets/app/gallery/videos/video-display/video-display.component.html
@@ -1,29 +1,28 @@
-<div class="row main-row">
-  <div class="list col-md-4 col-sm-3 col-xs-2">
+<div class="row main-row" (window:load) = "setScreen($event)" (window:resize) = "setScreen($event)">
+  <div class="list col-md-4 col-sm-3 col-xs-2" #list>
      <div *ngIf="videoList === undefined || videoList.length === 0">
        {{errMessage}}
      </div>
-    <div *ngIf="videoList != undefined">
+     <div *ngIf="videoList != undefined">
         <a *ngFor="let video of videoList" (click)="setSelectedVideo(video)">
-          <video width="320" height="240">
-             <source [src]="'../../assets/videos/'+ video.name " type="video/mp4"
-              class="img-fluid img-thumbnail mt-1"
-              [style.border]="video == selectedVideo ? '2px solid red': '1px solid white' " >
-              Your browser does not support the video tag.
-          </video>
+          <img [src]="'../../assets/videos/video'+video.id+'.jpg'" class="img-fluid img-thumbnail mt-1"
+          [style.border]="video == selectedVideo ? '2px solid red': '1px solid white' "/>
         </a>
-   </div>
+     </div>
   </div>
   <div class="item col-md-8 col-sm-9 col-xs-10">
        <div class="display-image">
-         <div class="video-play" *ngFor="let vid of videoList" >
-            <video *ngIf= "vid === selectedVideo" width="320" height="240" controls>
-               <source [src]="'../../assets/videos/'+ vid.name " type="video/mp4"
-                 class="img-fluid img-thumbnail mt-1">
-                 Your browser does not support the video tag.
-            </video>
-         </div>
-          <img [src]="'/assets/images/' + playPauseImage" class="img-fluid play" (click)="slidePlay()"/>
+           <div class="main-pix" (swipeleft)="onBack()" (swiperight)="onNext()">
+              <div class="video-play" *ngFor="let vid of videoList" >
+                 <video *ngIf= "vid === selectedVideo"
+                         controls>
+                    <source [src]="'../../assets/videos/'+ vid.name " type="video/mp4"
+                    class="img-fluid img-thumbnail mt-1">
+                    Your browser does not support the video tag.
+                 </video>
+             </div>
+          </div>
+          <!--<img [src]="'/assets/images/' + playPauseImage" class="img-fluid play" (click)="slidePlay()"/>-->
           <img src="/assets/images/back.png" class="img-fluid back"(click)="onBack()"/>
           <img src="/assets/images/next.png" class="img-fluid next"(click)="onNext()"/>
 
