--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -2,7 +2,7 @@
   <header>
      <app-header></app-header>
   </header>
-  <main class="Site-content">
+  <main class="Site-content mb-1">
      <router-outlet></router-outlet>
 
   </main>
