--- a/assets/app/advert/advert.component.html
+++ b/assets/app/advert/advert.component.html
@@ -1,4 +1,7 @@
+
 <div>
-  <h2>This Page is under Construction</h2>
-  <p> Please check back soon. Thanks </p>
+   <app-sub-menu [subMenuList] = "advertMenu"></app-sub-menu>
+   <router-outlet></router-outlet>
+   <h2>This Page is under Construction</h2>
+   <p> Please check back soon. Thanks </p>
 </div>
