--- a/assets/app/app.component.css
+++ b/assets/app/app.component.css
@@ -1,22 +1,18 @@
 header{
-  background-color:lightblue; /*#B3DBC0;*/
-  /*color: #BBC3C6;*/
-  padding:5px 0;
+  background-color:lightblue;
   border-bottom: 2px black solid;
+  padding:10px 0;
 }
 main{
   background-color: #FDF6F6;
-  /*margin-bottom: 5px;*/
 }
 .about{
+  background-color: #67BACA;
   clear: both;
   padding:10px 0;
-  background-color: #67BACA;
-
 }
 footer{
-  background-color: lightgrey;/*#67BACA;*/
-  color :white;
+  background-color: lightgrey;
   border-bottom:2px #FE0000  solid;
-
+  color :white;
 }
