--- a/assets/app/gallery/pictures/pics-display/pics-display.component.html
+++ b/assets/app/gallery/pictures/pics-display/pics-display.component.html
@@ -1,7 +1,5 @@
 <div class="row main-row" (window:load) = "setScreen($event)" (window:resize) = "setScreen($event)">
-<!--<div class="main-row">-->
-  <div class="list col-md-4 col-sm-3 col-xs-2" #list>
-  <!--<div class="list">-->
+   <div class="list col-md-4 col-sm-3 col-xs-2" #list>
      <div *ngIf="picsList === undefined || picsList.length === 0">
        {{errMessage}}
      </div>
@@ -13,19 +11,15 @@
    </div>
   </div>
   <div class="item col-md-8 col-sm-9 col-xs-10">
-  <!--<div class="item">-->
-       <div class="display-image">
-          <div class="main-pix" (swipeleft)="onBack()" (swiperight)="onNext()">
+      <div class="display-image">
+          <div class="main-pix" (swipeleft)="onBack()" (swiperight)="onNext()" >
             <img [src]= "'/assets/gallery/' + selectedPics.path"
                 class="img-fluid img-responsive img-thumbnail mt-1"/>
           </div>
           <p class="source">Source: <span>{{source}} </span></p>
-
           <img [src]="'/assets/images/' + playPauseImage" class="img-fluid play" (click)="slidePlay()"/>
           <img src="/assets/images/back.png" class="img-fluid back"(click)="onBack()"/>
-          <img src="/assets/images/next.png" class="img-fluid next"(click)="onNext()"/>
-
-       </div>
+          <img src="/assets/images/next.png" class="img-fluid next"(click)="onNext()"/></div>
        <div *ngIf="picsList.length !== 0" class="control">
          <p class="inlineElement backControl">
             {{back}}<img src="/assets/images/back.png" class="img-fluid back"(click)="onBack()"/>
@@ -33,12 +27,10 @@
          <p class="inlineElement nextControl">
             <img src="/assets/images/next.png" class="img-fluid next"(click)="onNext()"/>{{next}}
          </p>
-
-           <p class=" likesP" >
+         <p class=" likesP" >
               <img  [src]="'/assets/images/' + likeImage" class="img-fluid likes"(click)="onLike(selectedPics)"/>
               {{likes}}
-            </p>
-
-        </div>
+          </p>
+       </div>
     </div>
 </div>
