--- a/assets/app/gallery/gallery.component.html
+++ b/assets/app/gallery/gallery.component.html
@@ -1,2 +1,8 @@
-<app-sub-menu [subMenuList] = "galleryMenu"></app-sub-menu>
+
+<!--<app-sub-menu [subMenuList] = "galleryMenu"></app-sub-menu>-->
+<div class="subMenu pl-2" >
+  <a *ngFor = "let subMenu of subMenuList" [routerLink]="['/gallery', subMenu]"
+  routerLinkActive="router-link-active">{{subMenu}}</a>
+</div>
+
 <router-outlet></router-outlet>
