--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,8 +1,9 @@
-<div class = "container">
+<div [ngClass]="getClasses()" (window:load) = "appHandler($event)"
+             (window:resize) = "appHandler($event)" >
   <header>
      <app-header></app-header>
   </header>
-  <main class="Site-content mb-1">
+  <main class="Site-content mb-0">
      <router-outlet></router-outlet>
 
   </main>
