--- a/assets/app/gallery/albums/album-display/album-display.component.css
+++ b/assets/app/gallery/albums/album-display/album-display.component.css
@@ -1,5 +1,5 @@
 .main-row {
-  margin: 0 0 5px 10px;
+  margin: 0 0 5px 0;
 }
 .backP{
    position: relative;
@@ -13,9 +13,6 @@
   position:relative;
   margin-right: 0px;
 }
-.comment{
-
-}
 .commentP{
    position: relative;
    margin-right: 0px;
@@ -23,7 +20,7 @@
 .list{
 	  overflow: auto;
     white-space: nowrap;
-    background-color: grey;/*#B3DBC0;*/
+    background-color: grey;
     width: 100%;
     height:75px;
     border-radius:3px;
@@ -201,6 +198,5 @@ a:active{
   .control img {
      width:32px;
      height:32px;
-     text-decoration:
    }
 }
