--- a/assets/app/join-in/join-in.component.html
+++ b/assets/app/join-in/join-in.component.html
@@ -1,6 +1,6 @@
 <div>
-  <app-sub-menu [subMenuList] = "joinInMenu"></app-sub-menu>
-  <router-outlet></router-outlet>
+  <!--<app-sub-menu [subMenuList] = "joinInMenu"></app-sub-menu>
+  <router-outlet></router-outlet>-->
 
   <h2>This Page is under Construction</h2>
   <p> Please check back soon. Thanks </p>
